# HSVExpert

./: README.md  pyproject.toml  requirements.txt
app/: main.py
data/: pdf_counter.json
experiments/: compare_embed_model.py  evaluate_rerank_biobert.py  evaluate_rerank_openai.py  evaluate_rerank_pubmedbert.py
experiments/results/: biobert_reranking_comparison.csv  embedding_comparison_detailed_20250601_121034.csv  embedding_comparison_detailed_20250601_132821.csv  embedding_comparison_detailed_20250601_161532.csv  embedding_comparison_detailed_20250601_220025.csv  embedding_comparison_summary_20250601_121034.csv  embedding_comparison_summary_20250601_132821.csv  embedding_comparison_summary_20250601_161532.csv  embedding_comparison_summary_20250601_220025.csv  openai_reranking_comparison.csv  pubmedbert_reranking_comparison.csv
output/ExtractTextInfoFromPDF/: structuredData 3.json
scripts/: run_preprocess_chunk_embed.py  run_scraper.py  run_streamlit.sh
src/data_processing/: _Tokenization_Embedding.py  __init__.py  _chunking.py  _content_extract_pdf.py  _content_extract_xml.py  _qdrant.py
src/generation/: _rag_llm.py
src/pmc_download/: _PMC_scraper.py  __init__.py
src/retrieval/: __init__.py  _hybrid.py  _rerank.py  _retrieval.py
src/utils/: __init__.py  _helper.py
